--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.7.2",
     "multer": "^1.4.5-lts.1",
